# liar-dice

./: .env.example  .gitignore  Anchor.toml  README.md  package.json
app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.js  App.tsx  main.js  main.tsx  polyfills.js
app/src/chain/: bidRules.js  bidRules.ts  builders.js  builders.ts  confirm.ts  connection.js  connection.ts  constants.js  constants.ts  delegation.ts  enter.ts  games.js  games.ts  pdas.js  pdas.ts  program.js  program.ts  sendSession.js  sendSession.ts  sendWallet.js  sendWallet.ts  session.js  session.ts  txError.ts
app/src/hooks/: useAsyncData.ts  useGameActions.ts  useGameState.js  useGameState.ts  useGames.ts  useMyHand.js  useMyHand.ts  useSpectateGameState.ts
app/src/idl/: liar_dice.json  liar_dice.ts
app/src/screens/: Connect.js  Connect.tsx  EnterRollup.js  EnterRollup.tsx  GameOver.js  GameOver.tsx  GameTable.tsx  (+14 more)
docs/: architecture.md
programs/liar-dice/: Cargo.toml
programs/liar-dice/src/: errors.rs  lib.rs  logic.rs  state.rs
programs/liar-dice/src/instructions/: begin_bidding.rs  cancel_game.rs  challenge.rs  close_hand.rs  close_hand_permission.rs  consume_roll.rs  create_game.rs  delegate.rs  end_game.rs  force_timeout.rs  init_hand_permission.rs  join_game.rs  mod.rs  place_bid.rs  request_roll.rs  reveal.rs  settle_round.rs  start_game.rs
tests/: flow.ts  guards.ts  liar-dice.ts  stall.ts
tests/helpers/: accounts.ts  bidding.ts  connections.ts  instructions.ts  log.ts  player.ts  session.ts
(+28 files in other folders)
