[package]
name = "liar-dice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liar_dice"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "session-keys/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-keccak-hasher = "3.1.0"
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor-compat", "access-control"] }
ephemeral-vrf-sdk = { version = "0.4.1", features = ["anchor-compat"] }
session-keys = { version = "3.1.1", features = ["no-entrypoint"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
